Fixed sabnzbd overflow problem and added colour coding for active/inactive downloads.

--- a/css/front.css
+++ b/css/front.css
@@ -188,6 +188,7 @@ a.controlbutton img {
 #wSabnzbd #sab-queue {
 	display: inline-table;
 	width: 100%;
+	table-layout: fixed;
 }
 #wSabnzbd #sab-queue div.queueitem{
 	display: table-row;
